@@ -17,6 +17,7 @@ import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
 import uk.gov.hmcts.reform.civil.enums.YesOrNo;
 import uk.gov.hmcts.reform.civil.enums.dq.GAHearingDuration;
 import uk.gov.hmcts.reform.civil.enums.dq.GAHearingSupportRequirements;
+import uk.gov.hmcts.reform.civil.enums.dq.GAHearingType;
 import uk.gov.hmcts.reform.civil.enums.dq.GeneralApplicationTypes;
 import uk.gov.hmcts.reform.civil.ga.callback.GeneralApplicationCallbackHandler;
 import uk.gov.hmcts.reform.civil.ga.enums.dq.FinalOrderShowToggle;
@@ -45,7 +46,6 @@ import uk.gov.hmcts.reform.civil.ga.service.docmosis.WrittenRepresentationSequen
 import uk.gov.hmcts.reform.civil.ga.service.docmosis.directionorder.DirectionOrderGenerator;
 import uk.gov.hmcts.reform.civil.ga.service.docmosis.finalorder.FreeFormOrderGenerator;
 import uk.gov.hmcts.reform.civil.ga.utils.IdamUserUtils;
-import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.BusinessProcess;
 import uk.gov.hmcts.reform.civil.model.caseprogression.FreeFormOrderValues;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
@@ -53,7 +53,6 @@ import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
 import uk.gov.hmcts.reform.civil.model.common.Element;
 import uk.gov.hmcts.reform.civil.model.genapplication.GAHearingDetails;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
-import uk.gov.hmcts.reform.civil.service.CoreCaseDataService;
 import uk.gov.hmcts.reform.civil.service.DeadlinesCalculator;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
@@ -169,12 +168,18 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
     private static final String JUDICIAL_CONCURRENT_DATE =
         "The claimant and defendant should upload any written submissions and evidence by 4pm on %s";
     private static final String JUDICIAL_HEARING_REQ = "Hearing requirements %s";
-    private static final String ORDER_COURT_OWN_INITIATIVE = "As this order was made on the court's own initiative, any "
-        + "party affected by the order may apply to set aside, vary, or stay the order. "
-        + "Any such application must be made by 4pm on \n\n";
-    private static final String ORDER_WITHOUT_NOTICE = "If you were not notified of the application before this "
-        + "order was made, you may apply to set aside, vary, or stay the order. "
-        + "Any such application must be made by 4pm on \n\n";
+    private static final String ORDER_COURT_OWN_INITIATIVE = """
+            As this order was made on the court's own initiative, any \
+            party affected by the order may apply to set aside, vary, or stay the order. \
+            Any such application must be made by 4pm on\s
+            
+            """;
+    private static final String ORDER_WITHOUT_NOTICE = """
+            If you were not notified of the application before this \
+            order was made, you may apply to set aside, vary, or stay the order. \
+            Any such application must be made by 4pm on\s
+            
+            """;
     private static final String DISMISSAL_ORDER_TEXT = """
         This application is dismissed.
 
@@ -224,8 +229,6 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
     private final DeadlinesCalculator deadlinesCalculator;
     private final IdamClient idamClient;
     private final GaForLipService gaForLipService;
-    private final CaseDetailsConverter caseDetailsConverter;
-    private final CoreCaseDataService coreCaseDataService;
 
     public static String getAllPartyNames(GeneralApplicationCaseData caseData) {
         return format(
@@ -256,148 +259,156 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
     }
 
     private CallbackResponse checkInputForNextPage(CallbackParams callbackParams) {
-
         GeneralApplicationCaseData caseData = callbackParams.getGeneralApplicationCaseData();
-        GeneralApplicationCaseData caseDataBuilder = caseData.copy();
-        caseDataBuilder.judicialDecision(new GAJudicialDecision());
-        UserInfo userDetails = idamClient.getUserInfo(callbackParams.getParams().get(BEARER_TOKEN).toString());
-        caseDataBuilder.judgeTitle(IdamUserUtils.getIdamUserFullName(userDetails));
-
-        if (caseData.getApplicationIsCloaked() == null && !gaForLipService.isGaForLip(caseData)) {
-            caseDataBuilder.applicationIsCloaked(helper.isApplicationCreatedWithoutNoticeByApplicant(caseData));
-        } else if (caseData.getApplicationIsCloaked() == null && gaForLipService.isGaForLip(caseData)) {
-            caseDataBuilder.applicationIsCloaked(helper.isLipApplicationCreatedWithoutNoticeByApplicant(caseData));
-        }
-
-        caseDataBuilder.judicialDecisionMakeOrder(makeAnOrderBuilder(caseData, callbackParams));
-        caseDataBuilder.judgeRecitalText(getJudgeRecitalPrepopulatedText(caseData)).build();
-
-        caseDataBuilder
-            .judicialDecisionRequestMoreInfo(buildRequestMoreInfo(caseData));
-
-        caseDataBuilder.judicialGeneralHearingOrderRecital(getJudgeHearingRecitalPrepopulatedText(caseData))
-            .build();
-
-        YesOrNo isAppAndRespSameHearingPref = (caseData.getGeneralAppHearingDetails() != null
-            && caseData.getRespondentsResponses() != null
-            && caseData.getRespondentsResponses().size() == 1
-            && caseData.getGeneralAppHearingDetails().getHearingPreferencesPreferredType().getDisplayedValue()
-            .equals(caseData.getRespondentsResponses().stream().iterator().next().getValue().getGaHearingDetails()
-                        .getHearingPreferencesPreferredType().getDisplayedValue()))
-            ? YES : NO;
-
-        GAJudgesHearingListGAspec gaJudgesHearingListGAspec;
-        if (caseData.getJudicialListForHearing() != null) {
-            gaJudgesHearingListGAspec = caseData.getJudicialListForHearing().copy();
-        } else {
-            gaJudgesHearingListGAspec = new GAJudgesHearingListGAspec();
-        }
-
-        YesOrNo isAppAndRespSameSupportReq = (caseData.getGeneralAppHearingDetails() != null
-            && caseData.getRespondentsResponses() != null
-            && caseData.getRespondentsResponses().size() == 1
-            && caseData.getRespondentsResponses().get(0).getValue().getGaHearingDetails()
-            .getSupportRequirement() != null
-            && caseData.getGeneralAppHearingDetails().getSupportRequirement() != null
-            && checkIfAppAndRespHaveSameSupportReq(caseData))
-            ? YES : NO;
-
         String authToken = callbackParams.getParams().get(BEARER_TOKEN).toString();
-        DynamicList dynamicLocationList = getLocationsFromList(locationRefDataService.getCourtLocations(authToken));
-
-        boolean isAppAndRespSameCourtLocPref = helper.isApplicantAndRespondentLocationPrefSame(caseData);
-        if (isAppAndRespSameCourtLocPref) {
-            String applicationLocationLabel = caseData.getGeneralAppHearingDetails().getHearingPreferredLocation()
-                .getValue().getLabel();
-            Optional<DynamicListElement> first = dynamicLocationList.getListItems().stream()
-                .filter(l -> l.getLabel().equals(applicationLocationLabel)).findFirst();
-            first.ifPresent(dynamicLocationList::setValue);
-        }
-
-        YesOrNo isAppAndRespSameTimeEst = (caseData.getGeneralAppHearingDetails() != null
-            && caseData.getRespondentsResponses() != null
-            && caseData.getRespondentsResponses().size() == 1
-            && caseData.getGeneralAppHearingDetails().getHearingDuration() != null
-            && caseData.getGeneralAppHearingDetails().getHearingDuration()
-            == caseData.getRespondentsResponses().get(0).getValue().getGaHearingDetails().getHearingDuration())
-            ? YES : NO;
-
-        caseDataBuilder.judicialListForHearing(gaJudgesHearingListGAspec
-                                                   .setHearingPreferredLocation(dynamicLocationList)
-                                                   .setHearingPreferencesPreferredTypeLabel1(
-                                                       getJudgeHearingPrefType(caseData, isAppAndRespSameHearingPref))
-                                                   .setJudgeHearingCourtLocationText1(
-                                                       generateRespondentCourtLocationText(caseData))
-                                                   .setJudgeHearingTimeEstimateText1(
-                                                       getJudgeHearingTimeEst(caseData, isAppAndRespSameTimeEst))
-                                                   .setJudgeHearingSupportReqText1(
-                                                       getJudgeHearingSupportReq(caseData, isAppAndRespSameSupportReq))
-                                                   .setJudicialVulnerabilityText(
-                                                       getJudgeVulnerabilityText(caseData)));
+        GeneralApplicationCaseData caseDataBuilder = initialiseCaseDataForNextPage(callbackParams, caseData);
+        DynamicList dynamicLocationList = getDynamicLocationList(caseData, authToken);
+        caseDataBuilder.judicialListForHearing(buildJudicialListForHearing(caseData, dynamicLocationList));
 
         return AboutToStartOrSubmitCallbackResponse.builder()
             .data(caseDataBuilder.build().toMap(objectMapper))
             .build();
     }
 
+    private GeneralApplicationCaseData initialiseCaseDataForNextPage(CallbackParams callbackParams,
+                                                                     GeneralApplicationCaseData caseData) {
+        GeneralApplicationCaseData caseDataBuilder = caseData.copy();
+        caseDataBuilder.judicialDecision(new GAJudicialDecision());
+        UserInfo userDetails = idamClient.getUserInfo(callbackParams.getParams().get(BEARER_TOKEN).toString());
+        caseDataBuilder.judgeTitle(IdamUserUtils.getIdamUserFullName(userDetails));
+        setApplicationCloakStateIfMissing(caseData, caseDataBuilder);
+        caseDataBuilder.judicialDecisionMakeOrder(makeAnOrderBuilder(caseData, callbackParams));
+        caseDataBuilder.judgeRecitalText(getJudgeRecitalPrepopulatedText(caseData)).build();
+        caseDataBuilder.judicialDecisionRequestMoreInfo(buildRequestMoreInfo(caseData));
+        caseDataBuilder.judicialGeneralHearingOrderRecital(getJudgeHearingRecitalPrepopulatedText(caseData)).build();
+        return caseDataBuilder;
+    }
+
+    private void setApplicationCloakStateIfMissing(GeneralApplicationCaseData caseData,
+                                                   GeneralApplicationCaseData caseDataBuilder) {
+        if (caseData.getApplicationIsCloaked() != null) {
+            return;
+        }
+        if (gaForLipService.isGaForLip(caseData)) {
+            caseDataBuilder.applicationIsCloaked(helper.isLipApplicationCreatedWithoutNoticeByApplicant(caseData));
+            return;
+        }
+        caseDataBuilder.applicationIsCloaked(helper.isApplicationCreatedWithoutNoticeByApplicant(caseData));
+    }
+
+    private DynamicList getDynamicLocationList(GeneralApplicationCaseData caseData, String authToken) {
+        DynamicList dynamicLocationList = getLocationsFromList(locationRefDataService.getCourtLocations(authToken));
+        selectSharedApplicantLocation(caseData, dynamicLocationList);
+        return dynamicLocationList;
+    }
+
+    private void selectSharedApplicantLocation(GeneralApplicationCaseData caseData, DynamicList dynamicLocationList) {
+        if (!helper.isApplicantAndRespondentLocationPrefSame(caseData)) {
+            return;
+        }
+        String applicationLocationLabel = caseData.getGeneralAppHearingDetails().getHearingPreferredLocation()
+            .getValue().getLabel();
+        Optional<DynamicListElement> first = dynamicLocationList.getListItems().stream()
+            .filter(l -> l.getLabel().equals(applicationLocationLabel))
+            .findFirst();
+        first.ifPresent(dynamicLocationList::setValue);
+    }
+
+    private GAJudgesHearingListGAspec buildJudicialListForHearing(GeneralApplicationCaseData caseData,
+                                                                  DynamicList dynamicLocationList) {
+        GAJudgesHearingListGAspec gaJudgesHearingListGAspec = getOrCreateJudicialListForHearing(caseData);
+        YesOrNo isAppAndRespSameHearingPref = isApplicantAndRespondentSameHearingPreference(caseData);
+        YesOrNo isAppAndRespSameTimeEst = isApplicantAndRespondentSameTimeEstimate(caseData);
+        YesOrNo isAppAndRespSameSupportReq = isApplicantAndRespondentSameSupportRequirement(caseData);
+        return gaJudgesHearingListGAspec
+            .setHearingPreferredLocation(dynamicLocationList)
+            .setHearingPreferencesPreferredTypeLabel1(getJudgeHearingPrefType(caseData, isAppAndRespSameHearingPref))
+            .setJudgeHearingCourtLocationText1(generateRespondentCourtLocationText(caseData))
+            .setJudgeHearingTimeEstimateText1(getJudgeHearingTimeEst(caseData, isAppAndRespSameTimeEst))
+            .setJudgeHearingSupportReqText1(getJudgeHearingSupportReq(caseData, isAppAndRespSameSupportReq))
+            .setJudicialVulnerabilityText(getJudgeVulnerabilityText(caseData));
+    }
+
+    private GAJudgesHearingListGAspec getOrCreateJudicialListForHearing(GeneralApplicationCaseData caseData) {
+        return caseData.getJudicialListForHearing() != null
+            ? caseData.getJudicialListForHearing().copy()
+            : new GAJudgesHearingListGAspec();
+    }
+
+    private YesOrNo isApplicantAndRespondentSameHearingPreference(GeneralApplicationCaseData caseData) {
+        return caseData.getGeneralAppHearingDetails() != null
+            && hasSingleRespondentResponse(caseData)
+            && caseData.getGeneralAppHearingDetails().getHearingPreferencesPreferredType().getDisplayedValue()
+            .equals(caseData.getRespondentsResponses().stream().iterator().next().getValue().getGaHearingDetails()
+                        .getHearingPreferencesPreferredType().getDisplayedValue())
+            ? YES : NO;
+    }
+
+    private YesOrNo isApplicantAndRespondentSameSupportRequirement(GeneralApplicationCaseData caseData) {
+        return caseData.getGeneralAppHearingDetails() != null
+            && hasSingleRespondentResponse(caseData)
+            && caseData.getRespondentsResponses().getFirst().getValue().getGaHearingDetails().getSupportRequirement() != null
+            && caseData.getGeneralAppHearingDetails().getSupportRequirement() != null
+            && checkIfAppAndRespHaveSameSupportReq(caseData)
+            ? YES : NO;
+    }
+
+    private YesOrNo isApplicantAndRespondentSameTimeEstimate(GeneralApplicationCaseData caseData) {
+        return caseData.getGeneralAppHearingDetails() != null
+            && hasSingleRespondentResponse(caseData)
+            && caseData.getGeneralAppHearingDetails().getHearingDuration() != null
+            && caseData.getGeneralAppHearingDetails().getHearingDuration()
+            == caseData.getRespondentsResponses().getFirst().getValue().getGaHearingDetails().getHearingDuration()
+            ? YES : NO;
+    }
+
     private DynamicList getLocationsFromList(final List<LocationRefData> locations) {
-        return fromList(locations.stream().map(location -> new StringBuilder().append(location.getSiteName())
-                .append(" - ").append(location.getCourtAddress())
-                .append(" - ").append(location.getPostcode()).toString())
+        return fromList(locations.stream().map(location -> location.getSiteName() +
+                        " - " + location.getCourtAddress() +
+                        " - " + location.getPostcode())
                             .collect(Collectors.toList()));
     }
 
     public GAJudicialRequestMoreInfo buildRequestMoreInfo(GeneralApplicationCaseData caseData) {
+        return new GAJudicialRequestMoreInfo()
+            .setIsWithNotice(resolveRequestMoreInfoNotice(caseData))
+            .setJudgeRecitalText(getJudgeRecitalPrepopulatedText(caseData));
+    }
 
-        GAJudicialRequestMoreInfo gaJudicialRequestMoreInfo = new GAJudicialRequestMoreInfo();
-
-        if (caseData.getGeneralAppRespondentAgreement().getHasAgreed().equals(NO)) {
-            if (isAdditionalPaymentMade(caseData).equals(YES)) {
-                log.info(
-                    "General app respondent has not agreed and the additional payment has been made for caseId: {}",
-                    caseData.getCcdCaseReference()
-                );
-                gaJudicialRequestMoreInfo.setIsWithNotice(YES);
-            } else {
-                log.info(
-                    "General app respondent has not agreed and the additional payment has not been made for caseId: {}",
-                    caseData.getCcdCaseReference()
-                );
-                gaJudicialRequestMoreInfo
-                    .setIsWithNotice(caseData.getGeneralAppInformOtherParty().getIsWithNotice());
-            }
-
-        } else if (caseData.getGeneralAppRespondentAgreement().getHasAgreed().equals(YES)) {
-            log.info("General app respondent has agreed for caseId: {}", caseData.getCcdCaseReference());
-            if (isGeneralAppConsentOrder(caseData)) {
-                gaJudicialRequestMoreInfo.setIsWithNotice(NO);
-            } else {
-                gaJudicialRequestMoreInfo.setIsWithNotice(YES);
-            }
+    private YesOrNo resolveRequestMoreInfoNotice(GeneralApplicationCaseData caseData) {
+        if (YES.equals(caseData.getApplicationIsUncloakedOnce())) {
+            return YES;
         }
 
-        /*
-         * Set isWithNotice to Yes if Judge uncloaks the application
-         * */
-        if (caseData.getApplicationIsUncloakedOnce() != null
-            && caseData.getApplicationIsUncloakedOnce().equals(YES)) {
-            gaJudicialRequestMoreInfo.setIsWithNotice(YES);
+        YesOrNo hasAgreed = caseData.getGeneralAppRespondentAgreement().getHasAgreed();
+        if (NO.equals(hasAgreed)) {
+            return resolveRequestMoreInfoNoticeForDisagreedResponse(caseData);
+        }
+        if (YES.equals(hasAgreed)) {
+            return resolveRequestMoreInfoNoticeForAgreedResponse(caseData);
+        }
+        return null;
+    }
+
+    private YesOrNo resolveRequestMoreInfoNoticeForDisagreedResponse(GeneralApplicationCaseData caseData) {
+        if (isAdditionalPaymentMade(caseData).equals(YES)) {
+            log.info(
+                "General app respondent has not agreed and the additional payment has been made for caseId: {}",
+                caseData.getCcdCaseReference()
+            );
+            return YES;
         }
 
-        gaJudicialRequestMoreInfo
-            .setJudgeRecitalText(format(
-                JUDICIAL_RECITAL_TEXT,
-                helper.isApplicationCreatedWithoutNoticeByApplicant(caseData) == YES
-                    ? WITHOUT_NOTICE : " ",
-                (caseData.getParentClaimantIsApplicant() == null
-                    || YES.equals(caseData.getParentClaimantIsApplicant()))
-                    ? CLAIMANT : DEFENDANT,
-                DATE_FORMATTER.format(caseData.getCreatedDate()),
-                (helper.isApplicationCreatedWithoutNoticeByApplicant(caseData)
-                    == NO ? "" : judgeConsideredText(caseData))
-            ));
+        log.info(
+            "General app respondent has not agreed and the additional payment has not been made for caseId: {}",
+            caseData.getCcdCaseReference()
+        );
+        return caseData.getGeneralAppInformOtherParty().getIsWithNotice();
+    }
 
-        return gaJudicialRequestMoreInfo;
+    private YesOrNo resolveRequestMoreInfoNoticeForAgreedResponse(GeneralApplicationCaseData caseData) {
+        log.info("General app respondent has agreed for caseId: {}", caseData.getCcdCaseReference());
+        return isGeneralAppConsentOrder(caseData) ? NO : YES;
     }
 
     public String dismissalOrderText(GeneralApplicationCaseData caseData) {
@@ -438,17 +449,6 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
         }
 
         GAJudicialMakeAnOrder judicialDecisionMakeOrder = caseData.getJudicialDecisionMakeOrder();
-        if (judicialDecisionMakeOrder != null) {
-            return makeAnOrder
-                .setDisplayjudgeApproveEditOptionDate(displayjudgeApproveEditOptionDate(
-                    caseData,
-                    judicialDecisionMakeOrder
-                ))
-                .setDisplayjudgeApproveEditOptionDateForUnlessOrder(
-                    displayjudgeApproveEditOptionDateForUnlessOrder(caseData, judicialDecisionMakeOrder))
-                .setDisplayjudgeApproveEditOptionDoc(
-                    displayjudgeApproveEditOptionDoc(caseData, judicialDecisionMakeOrder));
-        }
 
         return makeAnOrder
             .setDisplayjudgeApproveEditOptionDate(displayjudgeApproveEditOptionDate(
@@ -525,7 +525,7 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
         return caseData.getGeneralAppType().getTypes().stream().anyMatch(validGATypes::contains);
     }
 
-    private Boolean checkIfAppAndRespHaveSameSupportReq(GeneralApplicationCaseData caseData) {
+    private boolean checkIfAppAndRespHaveSameSupportReq(GeneralApplicationCaseData caseData) {
 
         if (caseData.getRespondentsResponses().stream().iterator().next().getValue()
             .getGaHearingDetails().getSupportRequirement() != null) {
@@ -645,42 +645,46 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
     }
 
     private CallbackResponse gaValidateMakeAnOrder(CallbackParams callbackParams) {
-
         GeneralApplicationCaseData caseData = callbackParams.getGeneralApplicationCaseData();
         GeneralApplicationCaseData caseDataBuilder = caseData.copy();
 
         caseDataBuilder.judicialDecisionMakeOrder(makeAnOrderBuilder(caseData, callbackParams));
-
-        caseDataBuilder
-            .judicialDecisionRequestMoreInfo(buildRequestMoreInfo(caseData));
+        caseDataBuilder.judicialDecisionRequestMoreInfo(buildRequestMoreInfo(caseData));
 
         ArrayList<String> errors = new ArrayList<>();
-
-        if ((caseData.getApplicationIsUncloakedOnce() == null
-            && helper.isLipApplicationCreatedWithoutNoticeByApplicant(caseData).equals(YES)
-            && caseData.getJudicialDecision().getDecision().equals(MAKE_ORDER_FOR_WRITTEN_REPRESENTATIONS)
-            && gaForLipService.isGaForLip(caseData))
-            || (caseData.getApplicationIsUncloakedOnce() == null
-            && helper.isApplicationCreatedWithoutNoticeByApplicant(caseData).equals(YES)
-            && caseData.getJudicialDecision().getDecision().equals(MAKE_ORDER_FOR_WRITTEN_REPRESENTATIONS)
-            && !gaForLipService.isGaForLip(caseData))
-            || (caseData.getApplicationIsUncloakedOnce() != null
-            && caseData.getJudicialDecision().getDecision().equals(MAKE_ORDER_FOR_WRITTEN_REPRESENTATIONS)
-            && caseData.getApplicationIsUncloakedOnce().equals(NO))) {
+        if (requiresUncloakingForWrittenRepresentations(caseData)) {
             errors.add("The application needs to be uncloaked before requesting written representations");
         }
+        populateMakeAnOrderDefaults(caseData, caseDataBuilder);
+        caseDataBuilder.bilingualHint(setBilingualHint(caseData));
 
-        /*
-         * Set showRequestInfoPreview to NO as it caches and display Request More Information Document in Hearing screen
-         *  */
+        return AboutToStartOrSubmitCallbackResponse.builder()
+            .data(caseDataBuilder.build().toMap(objectMapper))
+            .errors(errors)
+            .build();
+    }
+
+    private boolean requiresUncloakingForWrittenRepresentations(GeneralApplicationCaseData caseData) {
+        if (!caseData.getJudicialDecision().getDecision().equals(MAKE_ORDER_FOR_WRITTEN_REPRESENTATIONS)) {
+            return false;
+        }
+        if (caseData.getApplicationIsUncloakedOnce() != null) {
+            return caseData.getApplicationIsUncloakedOnce().equals(NO);
+        }
+        if (gaForLipService.isGaForLip(caseData)) {
+            return helper.isLipApplicationCreatedWithoutNoticeByApplicant(caseData).equals(YES);
+        }
+        return helper.isApplicationCreatedWithoutNoticeByApplicant(caseData).equals(YES);
+    }
+
+    private void populateMakeAnOrderDefaults(GeneralApplicationCaseData caseData,
+                                             GeneralApplicationCaseData caseDataBuilder) {
         caseDataBuilder.showRequestInfoPreviewDoc(NO);
-
         caseDataBuilder.caseNameHmctsInternal(getAllPartyNames(caseData));
         caseDataBuilder.judicialDecisionRequestMoreInfo(
             new GAJudicialRequestMoreInfo().setJudgeRequestMoreInfoByDate(deadlinesCalculator
                 .getJudicialOrderDeadlineDate(LocalDateTime.now(), PLUS_7DAYS))
         );
-
         caseDataBuilder.orderOnCourtInitiative(new FreeFormOrderValues()
                                                    .setOnInitiativeSelectionTextArea(ON_INITIATIVE_SELECTION_TEST)
                                                    .setOnInitiativeSelectionDate(deadlinesCalculator
@@ -693,45 +697,22 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
                                                                                    LocalDateTime.now(), PLUS_7DAYS)));
         caseDataBuilder.judicialDecisionMakeAnOrderForWrittenRepresentations(
             new GAJudicialWrittenRepresentations()
-                .setWrittenConcurrentRepresentationsBy(deadlinesCalculator
-                                                        .getJudicialOrderDeadlineDate(
-                                                            LocalDateTime.now(),
-                                                            14
-                                                        ))
-                .setWrittenSequentailRepresentationsBy(deadlinesCalculator
-                                                        .getJudicialOrderDeadlineDate(
-                                                            LocalDateTime.now(),
-                                                            14
-                                                        ))
-                .setSequentialApplicantMustRespondWithin(deadlinesCalculator
-                                                          .getJudicialOrderDeadlineDate(
-                                                              LocalDateTime.now(),
-                                                              21
-                                                          )));
-
-        caseDataBuilder.bilingualHint(setBilingualHint(caseData));
-
-        return AboutToStartOrSubmitCallbackResponse.builder()
-            .data(caseDataBuilder.build().toMap(objectMapper))
-            .errors(errors)
-            .build();
+                .setWrittenConcurrentRepresentationsBy(deadlinesCalculator.getJudicialOrderDeadlineDate(LocalDateTime.now(), 14))
+                .setWrittenSequentailRepresentationsBy(deadlinesCalculator.getJudicialOrderDeadlineDate(LocalDateTime.now(), 14))
+                .setSequentialApplicantMustRespondWithin(deadlinesCalculator.getJudicialOrderDeadlineDate(LocalDateTime.now(), 21))
+        );
     }
 
     private YesOrNo setBilingualHint(GeneralApplicationCaseData caseData) {
-        if (Objects.nonNull(caseData.getJudicialDecision())) {
-            switch (caseData.getJudicialDecision().getDecision()) {
-                case LIST_FOR_A_HEARING:
-                case FREE_FORM_ORDER:
-                case MAKE_ORDER_FOR_WRITTEN_REPRESENTATIONS:
-                    return gaForLipService.anyWelshNotice(caseData) ? YES : NO;
-                case MAKE_AN_ORDER:
-                case REQUEST_MORE_INFO:
-                    return gaForLipService.anyWelsh(caseData) ? YES : NO;
-                default:
-                    return NO;
-            }
+        GAJudicialDecision judicialDecision = caseData.getJudicialDecision();
+        if (judicialDecision == null || judicialDecision.getDecision() == null) {
+            return NO;
         }
-        return NO;
+        return switch (judicialDecision.getDecision()) {
+            case LIST_FOR_A_HEARING, FREE_FORM_ORDER, MAKE_ORDER_FOR_WRITTEN_REPRESENTATIONS ->
+                gaForLipService.anyWelshNotice(caseData) ? YES : NO;
+            case MAKE_AN_ORDER, REQUEST_MORE_INFO -> gaForLipService.anyWelsh(caseData) ? YES : NO;
+        };
     }
 
     private CallbackResponse gaValidateRequestMoreInfoScreen(CallbackParams callbackParams) {
@@ -739,7 +720,22 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
         GeneralApplicationCaseData caseDataBuilder = caseData.copy();
 
         GAJudicialRequestMoreInfo judicialRequestMoreInfo = caseData.getJudicialDecisionRequestMoreInfo();
+        GAJudicialRequestMoreInfo gaJudicialRequestMoreInfo = copyJudicialRequestMoreInfo(caseData, judicialRequestMoreInfo);
+        caseDataBuilder.showRequestInfoPreviewDoc(shouldShowRequestInfoPreview(caseData, judicialRequestMoreInfo) ? YES : NO);
 
+        List<String> errors = validateDatesForRequestMoreInfoScreen(caseData, judicialRequestMoreInfo);
+
+        caseDataBuilder.judicialDecisionRequestMoreInfo(gaJudicialRequestMoreInfo);
+        populateRequestMoreInfoPreview(caseDataBuilder, caseData, callbackParams, judicialRequestMoreInfo);
+
+        return AboutToStartOrSubmitCallbackResponse.builder()
+            .errors(errors)
+            .data(caseDataBuilder.build().toMap(objectMapper))
+            .build();
+    }
+
+    private GAJudicialRequestMoreInfo copyJudicialRequestMoreInfo(GeneralApplicationCaseData caseData,
+                                                                  GAJudicialRequestMoreInfo judicialRequestMoreInfo) {
         GAJudicialRequestMoreInfo gaJudicialRequestMoreInfo = new GAJudicialRequestMoreInfo()
             .setRequestMoreInfoOption(judicialRequestMoreInfo.getRequestMoreInfoOption())
             .setJudgeRequestMoreInfoText(judicialRequestMoreInfo.getJudgeRequestMoreInfoText())
@@ -747,67 +743,53 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
             .setDeadlineForMoreInfoSubmission(judicialRequestMoreInfo.getDeadlineForMoreInfoSubmission())
             .setIsWithNotice(judicialRequestMoreInfo.getIsWithNotice())
             .setJudgeRecitalText(judicialRequestMoreInfo.getJudgeRecitalText());
+        populateMissingWithNoticeFlag(caseData, judicialRequestMoreInfo, gaJudicialRequestMoreInfo);
+        return gaJudicialRequestMoreInfo;
+    }
 
-        if (judicialRequestMoreInfo.getIsWithNotice() == null && caseData.getApplicationIsUncloakedOnce() == null) {
-
-            if (caseData.getGeneralAppRespondentAgreement().getHasAgreed().equals(NO)) {
-                gaJudicialRequestMoreInfo
-                    .setIsWithNotice(caseData.getGeneralAppInformOtherParty().getIsWithNotice());
-
-            } else if (caseData.getGeneralAppRespondentAgreement().getHasAgreed().equals(YES)) {
-                gaJudicialRequestMoreInfo.setIsWithNotice(YES);
-
-            }
+    private void populateMissingWithNoticeFlag(GeneralApplicationCaseData caseData,
+                                               GAJudicialRequestMoreInfo judicialRequestMoreInfo,
+                                               GAJudicialRequestMoreInfo gaJudicialRequestMoreInfo) {
+        if (judicialRequestMoreInfo.getIsWithNotice() != null || caseData.getApplicationIsUncloakedOnce() != null) {
+            return;
         }
-
-        if ((judicialRequestMoreInfo.getIsWithNotice() != null
-            && judicialRequestMoreInfo.getIsWithNotice().equals(YES))
-            ||
-            (caseData.getJudicialDecisionRequestMoreInfo() != null
-                && caseData.getJudicialDecisionRequestMoreInfo().getRequestMoreInfoOption()
-                .equals(REQUEST_MORE_INFORMATION))) {
-
-            caseDataBuilder.showRequestInfoPreviewDoc(YES);
-
-        } else {
-
-            caseDataBuilder.showRequestInfoPreviewDoc(NO);
-
+        if (caseData.getGeneralAppRespondentAgreement().getHasAgreed().equals(NO)) {
+            gaJudicialRequestMoreInfo.setIsWithNotice(caseData.getGeneralAppInformOtherParty().getIsWithNotice());
+            return;
         }
-
-        List<String> errors = validateDatesForRequestMoreInfoScreen(caseData, judicialRequestMoreInfo);
-
-        caseDataBuilder
-            .judicialDecisionRequestMoreInfo(gaJudicialRequestMoreInfo);
-
-        CaseDocument judgeDecision;
-
-        /*
-         * Generate Request More Information preview Doc if it's without notice application and Request More Info
-         * OR General Application is With notice
-         * */
-
-        if ((judicialRequestMoreInfo.getIsWithNotice() != null
-            && judicialRequestMoreInfo.getIsWithNotice().equals(YES))
-            ||
-            (judicialRequestMoreInfo.getJudgeRequestMoreInfoByDate() != null
-                && judicialRequestMoreInfo.getJudgeRequestMoreInfoText() != null
-                && caseData.getJudicialDecisionRequestMoreInfo().getRequestMoreInfoOption()
-                .equals(REQUEST_MORE_INFORMATION))) {
-
-            judgeDecision = requestForInformationGenerator.generate(
-                caseDataBuilder.build(),
-                callbackParams.getParams().get(BEARER_TOKEN).toString()
-            );
-            log.info("Request for information is generated for caseId: {}", caseData.getCcdCaseReference());
-
-            caseDataBuilder.judicialRequestMoreInfoDocPreview(judgeDecision.getDocumentLink());
+        if (caseData.getGeneralAppRespondentAgreement().getHasAgreed().equals(YES)) {
+            gaJudicialRequestMoreInfo.setIsWithNotice(YES);
         }
+    }
 
-        return AboutToStartOrSubmitCallbackResponse.builder()
-            .errors(errors)
-            .data(caseDataBuilder.build().toMap(objectMapper))
-            .build();
+    private boolean shouldShowRequestInfoPreview(GeneralApplicationCaseData caseData,
+                                                 GAJudicialRequestMoreInfo judicialRequestMoreInfo) {
+        return (judicialRequestMoreInfo.getIsWithNotice() != null && judicialRequestMoreInfo.getIsWithNotice().equals(YES))
+            || (caseData.getJudicialDecisionRequestMoreInfo() != null
+            && caseData.getJudicialDecisionRequestMoreInfo().getRequestMoreInfoOption().equals(REQUEST_MORE_INFORMATION));
+    }
+
+    private void populateRequestMoreInfoPreview(GeneralApplicationCaseData caseDataBuilder,
+                                                GeneralApplicationCaseData caseData,
+                                                CallbackParams callbackParams,
+                                                GAJudicialRequestMoreInfo judicialRequestMoreInfo) {
+        if (!shouldGenerateRequestMoreInfoPreview(caseData, judicialRequestMoreInfo)) {
+            return;
+        }
+        CaseDocument judgeDecision = requestForInformationGenerator.generate(
+            caseDataBuilder.build(),
+            callbackParams.getParams().get(BEARER_TOKEN).toString()
+        );
+        log.info("Request for information is generated for caseId: {}", caseData.getCcdCaseReference());
+        caseDataBuilder.judicialRequestMoreInfoDocPreview(judgeDecision.getDocumentLink());
+    }
+
+    private boolean shouldGenerateRequestMoreInfoPreview(GeneralApplicationCaseData caseData,
+                                                         GAJudicialRequestMoreInfo judicialRequestMoreInfo) {
+        return (judicialRequestMoreInfo.getIsWithNotice() != null && judicialRequestMoreInfo.getIsWithNotice().equals(YES))
+            || (judicialRequestMoreInfo.getJudgeRequestMoreInfoByDate() != null
+            && judicialRequestMoreInfo.getJudgeRequestMoreInfoText() != null
+            && caseData.getJudicialDecisionRequestMoreInfo().getRequestMoreInfoOption().equals(REQUEST_MORE_INFORMATION));
     }
 
     public List<String> validateDatesForRequestMoreInfoScreen(GeneralApplicationCaseData caseData,
@@ -827,12 +809,6 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
         return errors;
     }
 
-    private GeneralApplicationCaseData getSharedData(CallbackParams callbackParams) {
-        GeneralApplicationCaseData caseData = callbackParams.getGeneralApplicationCaseData();
-        // second idam call is workaround for null pointer when hiding field in getIdamEmail callback
-        return caseData.copy();
-    }
-
     private CallbackResponse gaPopulateFinalOrderPreviewDoc(final CallbackParams callbackParams) {
         GeneralApplicationCaseData caseData = callbackParams.getGeneralApplicationCaseData();
         GeneralApplicationCaseData caseDataBuilder = caseData.copy();
@@ -849,70 +825,86 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
     }
 
     private CallbackResponse setJudgeBusinessProcess(CallbackParams callbackParams) {
-        GeneralApplicationCaseData dataBuilder = getSharedData(callbackParams);
-        GeneralApplicationCaseData caseData = callbackParams.getGeneralApplicationCaseData();
-
-        if (caseData.getJudicialDecision().getDecision().name().equals(JUDICIAL_DECISION_LIST_FOR_HEARING)
-            && caseData.getJudicialListForHearing().getHearingPreferredLocation() != null) {
-            GAJudgesHearingListGAspec gaJudgesHearingListGAspec = caseData.getJudicialListForHearing().copy()
-                .setHearingPreferredLocation(populateJudicialHearingLocation(caseData));
-            GeneralApplicationCaseData updatedCaseData = caseData.copy().judicialListForHearing(
-                    gaJudgesHearingListGAspec)
-                .build();
-            caseData = updatedCaseData;
-            dataBuilder = updatedCaseData.copy();
-        }
+        GeneralApplicationCaseData caseData = getCaseDataWithPopulatedHearingLocation(callbackParams.getGeneralApplicationCaseData());
+        GeneralApplicationCaseData dataBuilder = caseData.copy();
         String caseId = caseData.getCcdCaseReference().toString();
         dataBuilder.businessProcess(BusinessProcess.readyGa(MAKE_DECISION)).build();
+        updateApplicationVisibilityAfterJudicialDecision(caseData, dataBuilder, caseId);
+        clearJudicialPreviewDocuments(caseData, dataBuilder);
+        clearJudicialListForHearingSummary(caseData, dataBuilder);
+        dataBuilder.bilingualHint(null);
+        return AboutToStartOrSubmitCallbackResponse.builder()
+            .data(dataBuilder.build().toMap(objectMapper))
+            .build();
+    }
 
-        var isApplicationUncloaked = isApplicationContinuesCloakedAfterJudicialDecision(caseData);
+    private GeneralApplicationCaseData getCaseDataWithPopulatedHearingLocation(GeneralApplicationCaseData caseData) {
+        if (!shouldPopulateJudicialHearingLocation(caseData)) {
+            return caseData;
+        }
+        GAJudgesHearingListGAspec gaJudgesHearingListGAspec = caseData.getJudicialListForHearing().copy()
+            .setHearingPreferredLocation(populateJudicialHearingLocation(caseData));
+        return caseData.copy().judicialListForHearing(gaJudgesHearingListGAspec).build();
+    }
+
+    private boolean shouldPopulateJudicialHearingLocation(GeneralApplicationCaseData caseData) {
+        return caseData.getJudicialDecision().getDecision().name().equals(JUDICIAL_DECISION_LIST_FOR_HEARING)
+            && caseData.getJudicialListForHearing().getHearingPreferredLocation() != null;
+    }
+
+    private void updateApplicationVisibilityAfterJudicialDecision(GeneralApplicationCaseData caseData,
+                                                                  GeneralApplicationCaseData dataBuilder,
+                                                                  String caseId) {
+        YesOrNo isApplicationUncloaked = isApplicationContinuesCloakedAfterJudicialDecision(caseData);
         if (Objects.isNull(isApplicationUncloaked)
             && helper.isApplicationCreatedWithoutNoticeByApplicant(caseData).equals(NO)) {
             dataBuilder.applicationIsCloaked(NO);
         } else {
             dataBuilder.applicationIsCloaked(isApplicationUncloaked);
         }
+        assignRespondentSolicitorIfRequired(caseData, dataBuilder, caseId, isApplicationUncloaked);
+    }
 
-        if (isApplicationUncloaked != null
-            && isApplicationUncloaked.equals(NO)) {
+    private void assignRespondentSolicitorIfRequired(GeneralApplicationCaseData caseData,
+                                                     GeneralApplicationCaseData dataBuilder,
+                                                     String caseId,
+                                                     YesOrNo isApplicationUncloaked) {
+        if (isApplicationUncloaked != null && isApplicationUncloaked.equals(NO)) {
             dataBuilder.applicationIsUncloakedOnce(YES);
             assignCaseToResopondentSolHelper.assignCaseToRespondentSolicitor(caseData, caseId);
-        } else if (caseData.getIsGaRespondentOneLip() == YES) {
-            /*
-             * Assign case respondent solicitors if LiP respondent so they can access application and order doc
-             * */
+            return;
+        }
+        if (caseData.getIsGaRespondentOneLip() == YES) {
             assignCaseToResopondentSolHelper.assignCaseToRespondentSolicitor(caseData, caseId);
         }
+    }
 
+    private void clearJudicialPreviewDocuments(GeneralApplicationCaseData caseData,
+                                               GeneralApplicationCaseData dataBuilder) {
         if (Objects.nonNull(caseData.getJudicialMakeOrderDocPreview())) {
             dataBuilder.judicialMakeOrderDocPreview(null);
         }
-
         if (Objects.nonNull(caseData.getJudicialListHearingDocPreview())) {
             dataBuilder.judicialListHearingDocPreview(null);
         }
-
         if (Objects.nonNull(caseData.getJudicialWrittenRepDocPreview())) {
             dataBuilder.judicialWrittenRepDocPreview(null);
         }
-
         if (Objects.nonNull(caseData.getJudicialRequestMoreInfoDocPreview())) {
             dataBuilder.judicialRequestMoreInfoDocPreview(null);
         }
+    }
 
-        if (Objects.nonNull(caseData.getJudicialListForHearing())) {
-            GAJudgesHearingListGAspec judicialListForHearing = caseData.getJudicialListForHearing().copy();
-
-            dataBuilder.judicialListForHearing(judicialListForHearing.setJudgeHearingCourtLocationText1(null)
-                                                   .setJudgeHearingTimeEstimateText1(null)
-                                                   .setHearingPreferencesPreferredTypeLabel1(null)
-                                                   .setJudgeHearingSupportReqText1(null));
+    private void clearJudicialListForHearingSummary(GeneralApplicationCaseData caseData,
+                                                    GeneralApplicationCaseData dataBuilder) {
+        if (Objects.isNull(caseData.getJudicialListForHearing())) {
+            return;
         }
-
-        dataBuilder.bilingualHint(null);
-        return AboutToStartOrSubmitCallbackResponse.builder()
-            .data(dataBuilder.build().toMap(objectMapper))
-            .build();
+        GAJudgesHearingListGAspec judicialListForHearing = caseData.getJudicialListForHearing().copy();
+        dataBuilder.judicialListForHearing(judicialListForHearing.setJudgeHearingCourtLocationText1(null)
+                                               .setJudgeHearingTimeEstimateText1(null)
+                                               .setHearingPreferencesPreferredTypeLabel1(null)
+                                               .setJudgeHearingSupportReqText1(null));
     }
 
     private DynamicList populateJudicialHearingLocation(GeneralApplicationCaseData caseData) {
@@ -928,31 +920,37 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
 
     private SubmittedCallbackResponse buildConfirmation(CallbackParams callbackParams) {
         GeneralApplicationCaseData caseData = callbackParams.getGeneralApplicationCaseData();
+        GAJudicialDecision judicialDecision = requireJudicialDecision(caseData);
+        ConfirmationContent confirmation = REQUEST_MORE_INFO.equals(judicialDecision.getDecision())
+            ? getRequestMoreInfoConfirmation(caseData)
+            : new ConfirmationContent("# Your order has been made", "<br/><br/>");
+
+        return SubmittedCallbackResponse.builder()
+            .confirmationHeader(confirmation.header())
+            .confirmationBody(confirmation.body())
+            .build();
+    }
+
+    private GAJudicialDecision requireJudicialDecision(GeneralApplicationCaseData caseData) {
         GAJudicialDecision judicialDecision = caseData.getJudicialDecision();
         if (judicialDecision == null || judicialDecision.getDecision() == null) {
             throw new IllegalArgumentException(JUDICIAL_MISSING_DATA);
         }
-        String confirmationHeader = "# Your order has been made";
-        String body = "<br/><br/>";
-        if (REQUEST_MORE_INFO.equals(judicialDecision.getDecision())) {
-            GAJudicialRequestMoreInfo requestMoreInfo = caseData.getJudicialDecisionRequestMoreInfo();
-            if (requestMoreInfo != null) {
-                if (REQUEST_MORE_INFORMATION.equals(requestMoreInfo.getRequestMoreInfoOption())
-                    || requestMoreInfo.getRequestMoreInfoOption() == null) {
-                    confirmationHeader = constructHeaderAndBody(requestMoreInfo, "header");
-                    body = constructHeaderAndBody(requestMoreInfo, "body");
-                } else if (SEND_APP_TO_OTHER_PARTY.equals(requestMoreInfo.getRequestMoreInfoOption())) {
-                    confirmationHeader = "# You have requested a response";
-                    body = "<br/><p>The parties will be notified.</p>";
-                }
-            } else {
-                throw new IllegalArgumentException(JUDICIAL_MISSING_DATA);
-            }
+        return judicialDecision;
+    }
+
+    private ConfirmationContent getRequestMoreInfoConfirmation(GeneralApplicationCaseData caseData) {
+        GAJudicialRequestMoreInfo requestMoreInfo = caseData.getJudicialDecisionRequestMoreInfo();
+        if (requestMoreInfo == null) {
+            throw new IllegalArgumentException(JUDICIAL_MISSING_DATA);
         }
-        return SubmittedCallbackResponse.builder()
-            .confirmationHeader(confirmationHeader)
-            .confirmationBody(body)
-            .build();
+        if (SEND_APP_TO_OTHER_PARTY.equals(requestMoreInfo.getRequestMoreInfoOption())) {
+            return new ConfirmationContent("# You have requested a response", "<br/><p>The parties will be notified.</p>");
+        }
+        return new ConfirmationContent(
+            constructHeaderAndBody(requestMoreInfo, "header"),
+            constructHeaderAndBody(requestMoreInfo, "body")
+        );
     }
 
     private String constructHeaderAndBody(GAJudicialRequestMoreInfo requestMoreInfo, String type) {
@@ -1172,9 +1170,7 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
 
         if (caseData.getJudicialListForHearing().getJudicialSupportRequirement() != null) {
             caseData.getJudicialListForHearing().getJudicialSupportRequirement()
-                .forEach(sr -> {
-                    supportReq.add(sr.getDisplayedValue());
-                });
+                .forEach(sr -> supportReq.add(sr.getDisplayedValue()));
 
             return format(
                 JUDICIAL_HEARING_REQ, supportReq);
@@ -1225,105 +1221,142 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
 
     }
 
-    private String getJudgeHearingPrefType(GeneralApplicationCaseData caseData, YesOrNo isAppAndRespSameHearingPref) {
-        String respondent1HearingType = null;
-        String respondent2HearingType = null;
+    private boolean hasSingleRespondentResponse(GeneralApplicationCaseData caseData) {
+        return caseData.getRespondentsResponses() != null && caseData.getRespondentsResponses().size() == 1;
+    }
 
-        if (caseData.getRespondentsResponses() != null && caseData.getRespondentsResponses().size() == 1) {
-            return isAppAndRespSameHearingPref == YES ? format(
-                JUDICIAL_PREF_TYPE_TEXT_2, caseData
-                    .getGeneralAppHearingDetails().getHearingPreferencesPreferredType().getDisplayedValue()
-            )
-                : format(
-                JUDICIAL_PREF_TYPE_TEXT_1, caseData.getGeneralAppHearingDetails()
-                    .getHearingPreferencesPreferredType().getDisplayedValue(), getRespondentHearingPreference(caseData)
-            );
-        }
+    private boolean hasTwoRespondentResponses(GeneralApplicationCaseData caseData) {
+        return caseData.getRespondentsResponses() != null && caseData.getRespondentsResponses().size() == 2;
+    }
 
-        if (caseData.getRespondentsResponses() != null && caseData.getRespondentsResponses().size() == 2) {
-            Optional<Element<GARespondentResponse>> responseElementOptional1 = response1(caseData);
-            Optional<Element<GARespondentResponse>> responseElementOptional2 = response2(caseData);
-            if (responseElementOptional1.isPresent()) {
-                respondent1HearingType = responseElementOptional1.get().getValue()
-                    .getGaHearingDetails().getHearingPreferencesPreferredType().getDisplayedValue();
-            }
-            if (responseElementOptional2.isPresent()) {
-                respondent2HearingType = responseElementOptional2.get().getValue()
-                    .getGaHearingDetails().getHearingPreferencesPreferredType().getDisplayedValue();
-            }
+    private String getSingleRespondentHearingPreferenceText(GeneralApplicationCaseData caseData,
+                                                            YesOrNo isAppAndRespSameHearingPref) {
+        if (isAppAndRespSameHearingPref == YES) {
             return format(
-                JUDICIAL_PREF_TYPE_TEXT_3, caseData.getGeneralAppHearingDetails()
-                    .getHearingPreferencesPreferredType().getDisplayedValue(),
-                respondent1HearingType, respondent2HearingType
+                JUDICIAL_PREF_TYPE_TEXT_2,
+                caseData.getGeneralAppHearingDetails().getHearingPreferencesPreferredType().getDisplayedValue()
             );
         }
+        return format(
+            JUDICIAL_PREF_TYPE_TEXT_1,
+            caseData.getGeneralAppHearingDetails().getHearingPreferencesPreferredType().getDisplayedValue(),
+            getRespondentHearingPreference(caseData)
+        );
+    }
 
-        if ((caseData.getGeneralAppUrgencyRequirement() != null
+    private String getTwoRespondentHearingPreferenceText(GeneralApplicationCaseData caseData) {
+        return format(
+            JUDICIAL_PREF_TYPE_TEXT_3,
+            caseData.getGeneralAppHearingDetails().getHearingPreferencesPreferredType().getDisplayedValue(),
+            getRespondentHearingPreferenceFromResponse(getRespondentResponseValue(response1(caseData))),
+            getRespondentHearingPreferenceFromResponse(getRespondentResponseValue(response2(caseData)))
+        );
+    }
+
+    private boolean shouldDisplayApplicantHearingPreference(GeneralApplicationCaseData caseData) {
+        return (caseData.getGeneralAppUrgencyRequirement() != null
             && caseData.getGeneralAppUrgencyRequirement().getGeneralAppUrgency() == YesOrNo.YES)
-            || caseData.getGeneralAppHearingDetails().getHearingPreferencesPreferredType() != null) {
+            || caseData.getGeneralAppHearingDetails().getHearingPreferencesPreferredType() != null;
+    }
+
+    private String getRespondentHearingPreferenceFromResponse(GARespondentResponse response) {
+        return Optional.ofNullable(response)
+            .map(GARespondentResponse::getGaHearingDetails)
+            .map(GAHearingDetails::getHearingPreferencesPreferredType)
+            .map(GAHearingType::getDisplayedValue)
+            .orElse(null);
+    }
+
+    private String getSingleRespondentHearingTimeEstimate(GeneralApplicationCaseData caseData,
+                                                          GAHearingDuration applicantHearingDuration,
+                                                          YesOrNo isAppAndRespSameTimeEst) {
+        GAHearingDuration respondentHearingDuration =
+            caseData.getRespondentsResponses().getFirst().getValue().getGaHearingDetails().getHearingDuration();
+        if (isAppAndRespSameTimeEst == YES) {
+            return format(JUDICIAL_TIME_EST_TEXT_BOTH, applicantHearingDuration.getDisplayedValue());
+        }
+        return buildHearingTimeEstimate(
+            applicantHearingDuration,
+            respondentHearingDuration,
+            null
+        );
+    }
+
+    private String getTwoRespondentHearingTimeEstimate(GeneralApplicationCaseData caseData,
+                                                       GAHearingDuration applicantHearingDuration) {
+        GAHearingDuration respondent1HearingDuration = response1(caseData).map(Element::getValue)
+            .map(GARespondentResponse::getGaHearingDetails).map(GAHearingDetails::getHearingDuration).orElse(null);
+        GAHearingDuration respondent2HearingDuration = response2(caseData).map(Element::getValue)
+            .map(GARespondentResponse::getGaHearingDetails).map(GAHearingDetails::getHearingDuration).orElse(null);
+        return buildHearingTimeEstimate(applicantHearingDuration, respondent1HearingDuration, respondent2HearingDuration);
+    }
+
+    private String buildHearingTimeEstimate(GAHearingDuration applicantHearingDuration,
+                                            GAHearingDuration respondent1HearingDuration,
+                                            GAHearingDuration respondent2HearingDuration) {
+        if (applicantHearingDuration == null && respondent1HearingDuration == null && respondent2HearingDuration == null) {
+            return ESTIMATES_NOT_PROVIDED;
+        }
+        List<String> estimates = new ArrayList<>();
+        addEstimateSentence(estimates, APPLICANT_ESTIMATES, applicantHearingDuration);
+        addEstimateSentence(
+            estimates,
+            respondent2HearingDuration == null ? RESPONDENT_ESTIMATES : RESPONDENT1_ESTIMATES,
+            respondent1HearingDuration
+        );
+        addEstimateSentence(estimates, RESPONDENT2_ESTIMATES, respondent2HearingDuration);
+        return joinEstimateSentences(estimates);
+    }
+
+    private void addEstimateSentence(List<String> estimates, String template, GAHearingDuration hearingDuration) {
+        if (hearingDuration != null) {
+            estimates.add(format(template, hearingDuration.getDisplayedValue()));
+        }
+    }
+
+    private String joinEstimateSentences(List<String> estimates) {
+        if (estimates.isEmpty()) {
+            return ESTIMATES_NOT_PROVIDED;
+        }
+        String hearingTimeEst = String.join(". ", estimates);
+        return estimates.size() > 1 ? hearingTimeEst + "." : hearingTimeEst;
+    }
+
+    private boolean shouldDisplayApplicantTimeEstimate(GeneralApplicationCaseData caseData,
+                                                       GAHearingDuration applicantHearingDuration) {
+        return (caseData.getGeneralAppUrgencyRequirement() != null
+            && caseData.getGeneralAppUrgencyRequirement().getGeneralAppUrgency() == YesOrNo.YES)
+            || applicantHearingDuration != null;
+    }
+
+    private String getJudgeHearingPrefType(GeneralApplicationCaseData caseData, YesOrNo isAppAndRespSameHearingPref) {
+        if (hasSingleRespondentResponse(caseData)) {
+            return getSingleRespondentHearingPreferenceText(caseData, isAppAndRespSameHearingPref);
+        }
+        if (hasTwoRespondentResponses(caseData)) {
+            return getTwoRespondentHearingPreferenceText(caseData);
+        }
+        if (shouldDisplayApplicantHearingPreference(caseData)) {
             return APPLICANT_PREFERS.concat(caseData
                                                 .getGeneralAppHearingDetails().getHearingPreferencesPreferredType()
                                                 .getDisplayedValue());
         }
-
         return StringUtils.EMPTY;
     }
 
     private String getJudgeHearingTimeEst(GeneralApplicationCaseData caseData, YesOrNo isAppAndRespSameTimeEst) {
         GAHearingDuration applicantHearingDuration = caseData.getGeneralAppHearingDetails().getHearingDuration();
-        if (caseData.getRespondentsResponses() != null && caseData.getRespondentsResponses().size() == 1) {
-            GAHearingDuration respondentHearingDuration =
-                caseData.getRespondentsResponses().get(0).getValue().getGaHearingDetails().getHearingDuration();
-            if (isAppAndRespSameTimeEst == YES) {
-                return format(JUDICIAL_TIME_EST_TEXT_BOTH, applicantHearingDuration.getDisplayedValue());
-            }
-            if (applicantHearingDuration == null && respondentHearingDuration == null) {
-                return ESTIMATES_NOT_PROVIDED;
-            }
-            String hearingTimeEst = StringUtils.EMPTY;
-            if (applicantHearingDuration != null) {
-                hearingTimeEst += format(APPLICANT_ESTIMATES, applicantHearingDuration.getDisplayedValue());
-            }
-            if (respondentHearingDuration != null) {
-                hearingTimeEst += ((hearingTimeEst.length() > 0 ? ". " : StringUtils.EMPTY)
-                    + format(RESPONDENT_ESTIMATES, respondentHearingDuration.getDisplayedValue()));
-            }
-            return hearingTimeEst + (hearingTimeEst.contains(".") ? "." : StringUtils.EMPTY);
+        if (hasSingleRespondentResponse(caseData)) {
+            return getSingleRespondentHearingTimeEstimate(caseData, applicantHearingDuration, isAppAndRespSameTimeEst);
         }
-
-        if (caseData.getRespondentsResponses() != null && caseData.getRespondentsResponses().size() == 2) {
-            Optional<Element<GARespondentResponse>> responseElementOptional1 = response1(caseData);
-            Optional<Element<GARespondentResponse>> responseElementOptional2 = response2(caseData);
-            GAHearingDuration respondent1HearingDuration = responseElementOptional1.map(Element::getValue)
-                .map(GARespondentResponse::getGaHearingDetails).map(GAHearingDetails::getHearingDuration).orElse(null);
-            GAHearingDuration respondent2HearingDuration = responseElementOptional2.map(Element::getValue)
-                .map(GARespondentResponse::getGaHearingDetails).map(GAHearingDetails::getHearingDuration).orElse(null);
-            if (applicantHearingDuration == null && respondent1HearingDuration == null && respondent2HearingDuration == null) {
-                return ESTIMATES_NOT_PROVIDED;
-            }
-            String hearingTimeEst = StringUtils.EMPTY;
-            if (applicantHearingDuration != null) {
-                hearingTimeEst += format(APPLICANT_ESTIMATES, applicantHearingDuration.getDisplayedValue());
-            }
-            if (respondent1HearingDuration != null) {
-                hearingTimeEst += ((hearingTimeEst.length() > 0 ? ". " : StringUtils.EMPTY)
-                    + format(RESPONDENT1_ESTIMATES, respondent1HearingDuration.getDisplayedValue()));
-            }
-            if (respondent2HearingDuration != null) {
-                hearingTimeEst += ((hearingTimeEst.length() > 0 ? ". " : StringUtils.EMPTY)
-                    + format(RESPONDENT2_ESTIMATES, respondent2HearingDuration.getDisplayedValue()));
-            }
-            return hearingTimeEst + (hearingTimeEst.contains(".") ? "." : StringUtils.EMPTY);
+        if (hasTwoRespondentResponses(caseData)) {
+            return getTwoRespondentHearingTimeEstimate(caseData, applicantHearingDuration);
         }
-
-        if ((caseData.getGeneralAppUrgencyRequirement() != null
-            && caseData.getGeneralAppUrgencyRequirement().getGeneralAppUrgency() == YesOrNo.YES)
-            || applicantHearingDuration != null) {
+        if (shouldDisplayApplicantTimeEstimate(caseData, applicantHearingDuration)) {
             return applicantHearingDuration != null
                 ? format(APPLICANT_ESTIMATES, applicantHearingDuration.getDisplayedValue())
                 : ESTIMATES_NOT_PROVIDED;
         }
-
         return StringUtils.EMPTY;
     }
 
@@ -1371,53 +1404,26 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
                                                         boolean hasRespondentVulnerabilityResponded,
                                                         boolean hasRespondent1VulnerabilityResponded,
                                                         boolean hasRespondent2VulnerabilityResponded) {
+        String applicantText = getApplicantVulnerabilityText(caseData);
         if (hasRespondentVulnerabilityResponded) {
-            return JUDICIAL_APPLICANT_VULNERABILITY_TEXT
-                .concat(caseData.getGeneralAppHearingDetails()
-                            .getVulnerabilityQuestion()
-                            .concat(JUDICIAL_RESPONDENT_VULNERABILITY_TEXT)
-                            .concat(caseData.getRespondentsResponses().stream().iterator().next().getValue()
-                                        .getGaHearingDetails().getVulnerabilityQuestion()));
+            return applicantText.concat(getSingleRespondentVulnerabilityText(caseData));
         }
-        if (hasRespondent1VulnerabilityResponded
-            && hasRespondent2VulnerabilityResponded) {
-            Optional<Element<GARespondentResponse>> responseElementOptional1 = response1(caseData);
-            Optional<Element<GARespondentResponse>> responseElementOptional2 = response2(caseData);
-            if (responseElementOptional1.isPresent() && responseElementOptional2.isPresent()) {
-                return JUDICIAL_APPLICANT_VULNERABILITY_TEXT
-                    .concat(caseData.getGeneralAppHearingDetails()
-                                .getVulnerabilityQuestion()
-                                .concat(JUDICIAL_RESPONDENT1_VULNERABILITY_TEXT)
-                                .concat(responseElementOptional1.get().getValue()
-                                            .getGaHearingDetails().getVulnerabilityQuestion())
-                                .concat(JUDICIAL_RESPONDENT2_VULNERABILITY_TEXT)
-                                .concat(responseElementOptional2.get().getValue()
-                                            .getGaHearingDetails().getVulnerabilityQuestion()));
-            }
+        if (hasRespondent1VulnerabilityResponded && hasRespondent2VulnerabilityResponded) {
+            return appendApplicantVulnerabilityTextForTwoRespondents(caseData, applicantText);
         }
-        if (hasRespondent1VulnerabilityResponded
-            && !hasRespondent2VulnerabilityResponded) {
-            Optional<Element<GARespondentResponse>> responseElementOptional1 = response1(caseData);
-            if (responseElementOptional1.isPresent()) {
-                return JUDICIAL_APPLICANT_VULNERABILITY_TEXT
-                    .concat(caseData.getGeneralAppHearingDetails()
-                                .getVulnerabilityQuestion()
-                                .concat(JUDICIAL_RESPONDENT1_VULNERABILITY_TEXT)
-                                .concat(responseElementOptional1.get().getValue()
-                                            .getGaHearingDetails().getVulnerabilityQuestion()));
-            }
+        if (hasRespondent1VulnerabilityResponded) {
+            return appendApplicantVulnerabilityText(
+                applicantText,
+                getRespondentResponseValue(response1(caseData)),
+                JUDICIAL_RESPONDENT1_VULNERABILITY_TEXT
+            );
         }
-        if (!hasRespondent1VulnerabilityResponded
-            && hasRespondent2VulnerabilityResponded) {
-            Optional<Element<GARespondentResponse>> responseElementOptional2 = response2(caseData);
-            if (responseElementOptional2.isPresent()) {
-                return JUDICIAL_APPLICANT_VULNERABILITY_TEXT
-                    .concat(caseData.getGeneralAppHearingDetails()
-                                .getVulnerabilityQuestion()
-                                .concat(JUDICIAL_RESPONDENT2_VULNERABILITY_TEXT)
-                                .concat(responseElementOptional2.get().getValue()
-                                            .getGaHearingDetails().getVulnerabilityQuestion()));
-            }
+        if (hasRespondent2VulnerabilityResponded) {
+            return appendApplicantVulnerabilityText(
+                applicantText,
+                getRespondentResponseValue(response2(caseData)),
+                JUDICIAL_RESPONDENT2_VULNERABILITY_TEXT
+            );
         }
         return null;
     }
@@ -1426,38 +1432,78 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
                                                        //boolean hasRespondentVulnerabilityResponded,
                                                        boolean hasRespondent1VulnerabilityResponded,
                                                        boolean hasRespondent2VulnerabilityResponded) {
-        if (hasRespondent1VulnerabilityResponded
-            && hasRespondent2VulnerabilityResponded) {
-            Optional<Element<GARespondentResponse>> responseElementOptional1 = response1(caseData);
-            Optional<Element<GARespondentResponse>> responseElementOptional2 = response2(caseData);
-            if (responseElementOptional1.isPresent() && responseElementOptional2.isPresent()) {
-                return JUDICIAL_RESPONDENT1_VULNERABILITY_TEXT
-                    .concat(responseElementOptional1.get().getValue()
-                                .getGaHearingDetails().getVulnerabilityQuestion())
-                    .concat(JUDICIAL_RESPONDENT2_VULNERABILITY_TEXT)
-                    .concat(responseElementOptional2.get().getValue()
-                                .getGaHearingDetails().getVulnerabilityQuestion());
-            }
+        if (hasRespondent1VulnerabilityResponded && hasRespondent2VulnerabilityResponded) {
+            return buildRespondentOnlyVulnerabilityText(caseData);
         }
-        if (!hasRespondent1VulnerabilityResponded
-            && hasRespondent2VulnerabilityResponded) {
-            Optional<Element<GARespondentResponse>> responseElementOptional2 = response2(caseData);
-            if (responseElementOptional2.isPresent()) {
-                return JUDICIAL_RESPONDENT2_VULNERABILITY_TEXT
-                    .concat(responseElementOptional2.get().getValue()
-                                .getGaHearingDetails().getVulnerabilityQuestion());
-            }
+        if (hasRespondent2VulnerabilityResponded) {
+            return getRespondentVulnerabilityText(
+                getRespondentResponseValue(response2(caseData)),
+                JUDICIAL_RESPONDENT2_VULNERABILITY_TEXT
+            );
         }
-        if (hasRespondent1VulnerabilityResponded
-            && !hasRespondent2VulnerabilityResponded) {
-            Optional<Element<GARespondentResponse>> responseElementOptional1 = response1(caseData);
-            if (responseElementOptional1.isPresent()) {
-                return JUDICIAL_RESPONDENT1_VULNERABILITY_TEXT
-                    .concat(responseElementOptional1.get().getValue()
-                                .getGaHearingDetails().getVulnerabilityQuestion());
-            }
+        if (hasRespondent1VulnerabilityResponded) {
+            return getRespondentVulnerabilityText(
+                getRespondentResponseValue(response1(caseData)),
+                JUDICIAL_RESPONDENT1_VULNERABILITY_TEXT
+            );
         }
         return null;
+    }
+
+    private String getApplicantVulnerabilityText(GeneralApplicationCaseData caseData) {
+        return JUDICIAL_APPLICANT_VULNERABILITY_TEXT
+            .concat(caseData.getGeneralAppHearingDetails().getVulnerabilityQuestion());
+    }
+
+    private String getSingleRespondentVulnerabilityText(GeneralApplicationCaseData caseData) {
+        return JUDICIAL_RESPONDENT_VULNERABILITY_TEXT
+            .concat(caseData.getRespondentsResponses().stream().iterator().next().getValue()
+                        .getGaHearingDetails().getVulnerabilityQuestion());
+    }
+
+    private String appendApplicantVulnerabilityText(String applicantText,
+                                                    GARespondentResponse response,
+                                                    String respondentPrefix) {
+        String respondentText = getRespondentVulnerabilityText(response, respondentPrefix);
+        return respondentText == null ? null : applicantText.concat(respondentText);
+    }
+
+    private String appendApplicantVulnerabilityTextForTwoRespondents(GeneralApplicationCaseData caseData,
+                                                                     String applicantText) {
+        String respondentOneText = getRespondentVulnerabilityText(
+            getRespondentResponseValue(response1(caseData)),
+            JUDICIAL_RESPONDENT1_VULNERABILITY_TEXT
+        );
+        String respondentTwoText = getRespondentVulnerabilityText(
+            getRespondentResponseValue(response2(caseData)),
+            JUDICIAL_RESPONDENT2_VULNERABILITY_TEXT
+        );
+        return respondentOneText != null && respondentTwoText != null
+            ? applicantText.concat(respondentOneText).concat(respondentTwoText)
+            : null;
+    }
+
+    private String buildRespondentOnlyVulnerabilityText(GeneralApplicationCaseData caseData) {
+        String respondentOneText = getRespondentVulnerabilityText(
+            getRespondentResponseValue(response1(caseData)),
+            JUDICIAL_RESPONDENT1_VULNERABILITY_TEXT
+        );
+        String respondentTwoText = getRespondentVulnerabilityText(
+            getRespondentResponseValue(response2(caseData)),
+            JUDICIAL_RESPONDENT2_VULNERABILITY_TEXT
+        );
+        return respondentOneText != null && respondentTwoText != null
+            ? respondentOneText.concat(respondentTwoText)
+            : null;
+    }
+
+    private String getRespondentVulnerabilityText(GARespondentResponse response,
+                                                  String respondentPrefix) {
+        return Optional.ofNullable(response)
+            .map(GARespondentResponse::getGaHearingDetails)
+            .map(GAHearingDetails::getVulnerabilityQuestion)
+            .map(respondentPrefix::concat)
+            .orElse(null);
     }
 
     private boolean hasRespondentVulnerabilityResponded(int responseCount, GeneralApplicationCaseData caseData) {
@@ -1492,7 +1538,7 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
                             .getVulnerabilityQuestion());
         } else {
             return hasRespondentVulnerabilityResponded
-                ? ltrim(JUDICIAL_RESPONDENT_VULNERABILITY_TEXT).concat(caseData.getRespondentsResponses().stream()
+                ? ltrim().concat(caseData.getRespondentsResponses().stream()
                                                                            .iterator().next().getValue()
                                                                            .getGaHearingDetails()
                                                                            .getVulnerabilityQuestion())
@@ -1500,64 +1546,57 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
         }
     }
 
-    private String ltrim(String str) {
-        return str.replaceAll("^\\s+", EMPTY_STRING);
+    private String ltrim() {
+        return JudicialDecisionHandler.JUDICIAL_RESPONDENT_VULNERABILITY_TEXT.replaceAll("^\\s+", EMPTY_STRING);
     }
 
     private String getJudgeHearingSupportReq(GeneralApplicationCaseData caseData, YesOrNo isAppAndRespSameSupportReq) {
-        List<String> applicantSupportReq = Collections.emptyList();
-        String resSupportReq = StringUtils.EMPTY;
-        String appSupportReq = StringUtils.EMPTY;
-
-        if (caseData.getGeneralAppHearingDetails().getSupportRequirement() != null) {
-            applicantSupportReq = caseData.getGeneralAppHearingDetails().getSupportRequirement().stream()
-                .map(GAHearingSupportRequirements::getDisplayedValue).toList();
-
-            appSupportReq = String.join(", ", applicantSupportReq);
+        List<String> applicantSupportReq = getDisplayedSupportRequirements(caseData.getGeneralAppHearingDetails().getSupportRequirement());
+        String appSupportReq = String.join(", ", applicantSupportReq);
+        if (hasSingleRespondentResponse(caseData)) {
+            return getSingleRespondentSupportReq(caseData, isAppAndRespSameSupportReq, applicantSupportReq, appSupportReq);
         }
-
-        if (caseData.getRespondentsResponses() != null && caseData.getRespondentsResponses().size() == 1) {
-            List<String> respondentSupportReq = Collections.emptyList();
-            if (caseData.getRespondentsResponses() != null
-                && caseData.getRespondentsResponses().size() == 1
-                && caseData.getRespondentsResponses().get(ONE_V_ONE).getValue().getGaHearingDetails()
-                .getSupportRequirement() != null) {
-                respondentSupportReq
-                    = caseData.getRespondentsResponses().stream().iterator().next().getValue()
-                    .getGaHearingDetails().getSupportRequirement().stream()
-                    .map(GAHearingSupportRequirements::getDisplayedValue)
-                    .toList();
-
-                resSupportReq = String.join(", ", respondentSupportReq);
-            }
-
-            return isAppAndRespSameSupportReq == YES ? format(JUDICIAL_SUPPORT_REQ_TEXT_2, appSupportReq)
-                : format(
-                JUDICIAL_SUPPORT_REQ_TEXT_1,
-                constructApplicantSupportReqText(applicantSupportReq, appSupportReq),
-                constructRespondentSupportReqText(respondentSupportReq, resSupportReq)
-            );
-        }
-
-        if (caseData.getRespondentsResponses() != null && caseData.getRespondentsResponses().size() == 2) {
+        if (hasTwoRespondentResponses(caseData)) {
             return createJudicialSupportReqText3(caseData, appSupportReq);
         }
-
-        if ((caseData.getGeneralAppUrgencyRequirement() != null
-            && caseData.getGeneralAppUrgencyRequirement().getGeneralAppUrgency() == YesOrNo.YES)
-            || caseData.getGeneralAppHearingDetails() != null) {
+        if (shouldDisplayApplicantSupportReq(caseData)) {
             return APPLICANT_REQUIRES.concat(applicantSupportReq.isEmpty() ? NO_SUPPORT : appSupportReq);
         }
-
         return StringUtils.EMPTY;
     }
 
-    private String createJudicialSupportReqText3(GeneralApplicationCaseData caseData, String appSupportReq) {
-        Optional<Element<GARespondentResponse>> response1 = response1(caseData);
-        Optional<Element<GARespondentResponse>> response2 = response2(caseData);
+    private List<String> getDisplayedSupportRequirements(List<GAHearingSupportRequirements> supportRequirements) {
+        return supportRequirements == null
+            ? Collections.emptyList()
+            : supportRequirements.stream().map(GAHearingSupportRequirements::getDisplayedValue).toList();
+    }
 
-        String respondentOne = retrieveSupportRequirementsFromResponse(response1);
-        String respondentTwo = retrieveSupportRequirementsFromResponse(response2);
+    private String getSingleRespondentSupportReq(GeneralApplicationCaseData caseData,
+                                                 YesOrNo isAppAndRespSameSupportReq,
+                                                 List<String> applicantSupportReq,
+                                                 String appSupportReq) {
+        List<String> respondentSupportReq = getDisplayedSupportRequirements(
+            caseData.getRespondentsResponses().get(ONE_V_ONE).getValue().getGaHearingDetails().getSupportRequirement()
+        );
+        String resSupportReq = String.join(", ", respondentSupportReq);
+        return isAppAndRespSameSupportReq == YES
+            ? format(JUDICIAL_SUPPORT_REQ_TEXT_2, appSupportReq)
+            : format(
+            JUDICIAL_SUPPORT_REQ_TEXT_1,
+            constructApplicantSupportReqText(applicantSupportReq, appSupportReq),
+            constructRespondentSupportReqText(respondentSupportReq, resSupportReq)
+        );
+    }
+
+    private boolean shouldDisplayApplicantSupportReq(GeneralApplicationCaseData caseData) {
+        return (caseData.getGeneralAppUrgencyRequirement() != null
+            && caseData.getGeneralAppUrgencyRequirement().getGeneralAppUrgency() == YesOrNo.YES)
+            || caseData.getGeneralAppHearingDetails() != null;
+    }
+
+    private String createJudicialSupportReqText3(GeneralApplicationCaseData caseData, String appSupportReq) {
+        String respondentOne = retrieveSupportRequirementsFromResponse(getRespondentResponseValue(response1(caseData)));
+        String respondentTwo = retrieveSupportRequirementsFromResponse(getRespondentResponseValue(response2(caseData)));
         return format(
             JUDICIAL_SUPPORT_REQ_TEXT_3,
             appSupportReq.isEmpty() ? NO_SUPPORT : appSupportReq,
@@ -1574,45 +1613,42 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
         return format(respondentSupportReq.isEmpty() ? NO_SUPPORT : resSupportReq);
     }
 
-    private String retrieveSupportRequirementsFromResponse(Optional<Element<GARespondentResponse>> response) {
-        if (response.isPresent()
-            && response.get().getValue().getGaHearingDetails().getSupportRequirement() != null) {
-            return response.get().getValue().getGaHearingDetails()
-                .getSupportRequirement().stream().map(GAHearingSupportRequirements::getDisplayedValue)
-                .collect(Collectors.joining(", "));
-        }
-        return StringUtils.EMPTY;
+    private String retrieveSupportRequirementsFromResponse(GARespondentResponse response) {
+        return Optional.ofNullable(response)
+            .map(GARespondentResponse::getGaHearingDetails)
+            .map(GAHearingDetails::getSupportRequirement)
+            .map(supportRequirements -> supportRequirements.stream()
+                .map(GAHearingSupportRequirements::getDisplayedValue)
+                .collect(Collectors.joining(", ")))
+            .orElse(StringUtils.EMPTY);
     }
 
     private String generateRespondentCourtLocationText(GeneralApplicationCaseData caseData) {
-
-        if (caseData.getGeneralAppHearingDetails().getHearingPreferredLocation() == null
-            && caseData.getRespondentsResponses() != null) {
-            return generateRespondentCourtDirectionText(caseData);
+        String applicantCourtLocationText = getApplicantCourtLocationText(caseData);
+        String respondentCourtLocationText = hasRespondentResponses(caseData)
+            ? generateRespondentCourtDirectionText(caseData)
+            : StringUtils.EMPTY;
+        if (applicantCourtLocationText.isEmpty()) {
+            return respondentCourtLocationText;
         }
-
-        if (caseData.getGeneralAppHearingDetails().getHearingPreferredLocation() != null
-            && caseData.getRespondentsResponses() == null) {
-            return format(
-                JUDICIAL_PREF_COURT_LOC_APPLICANT_TEXT, caseData.getGeneralAppHearingDetails()
-                    .getHearingPreferredLocation().getValue().getLabel()
-            );
+        if (respondentCourtLocationText.isEmpty()) {
+            return applicantCourtLocationText;
         }
-        if (caseData.getGeneralAppHearingDetails().getHearingPreferredLocation() != null
-            && caseData.getRespondentsResponses() != null) {
+        return concat(concat(applicantCourtLocationText, " "), respondentCourtLocationText).trim();
+    }
 
-            return concat(
-                concat(
-                    format(
-                        JUDICIAL_PREF_COURT_LOC_APPLICANT_TEXT, caseData.getGeneralAppHearingDetails()
-                            .getHearingPreferredLocation().getValue().getLabel()
-                    ), " "
-                ),
-                generateRespondentCourtDirectionText(caseData)
-            ).trim();
+    private String getApplicantCourtLocationText(GeneralApplicationCaseData caseData) {
+        if (caseData.getGeneralAppHearingDetails().getHearingPreferredLocation() == null) {
+            return StringUtils.EMPTY;
         }
+        return format(
+            JUDICIAL_PREF_COURT_LOC_APPLICANT_TEXT,
+            caseData.getGeneralAppHearingDetails().getHearingPreferredLocation().getValue().getLabel()
+        );
+    }
 
-        return StringUtils.EMPTY;
+    private boolean hasRespondentResponses(GeneralApplicationCaseData caseData) {
+        return caseData.getRespondentsResponses() != null;
     }
 
     public List<String> validateJudgeOrderRequestDates(GAJudicialMakeAnOrder judicialDecisionMakeOrder) {
@@ -1653,7 +1689,7 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
 
     private Optional<Element<GARespondentResponse>> response1(GeneralApplicationCaseData caseData) {
         List<Element<GARespondentResponse>> respondentResponse = caseData.getRespondentsResponses();
-        String respondent1Id = caseData.getGeneralAppRespondentSolicitors().get(0).getValue().getId();
+        String respondent1Id = caseData.getGeneralAppRespondentSolicitors().getFirst().getValue().getId();
         Optional<Element<GARespondentResponse>> responseElementOptional1;
         responseElementOptional1 = respondentResponse.stream()
             .filter(res -> res.getValue() != null && res.getValue().getGaRespondentDetails()
@@ -1671,59 +1707,49 @@ public class JudicialDecisionHandler extends CallbackHandler implements GeneralA
         return responseElementOptional2;
     }
 
+    private GARespondentResponse getRespondentResponseValue(Optional<Element<GARespondentResponse>> response) {
+        return response.map(Element::getValue).orElse(null);
+    }
+
     private String generateRespondentCourtDirectionText(GeneralApplicationCaseData caseData) {
-        Optional<Element<GARespondentResponse>> responseElementOptional1 = Optional.empty();
-        Optional<Element<GARespondentResponse>> responseElementOptional2 = Optional.empty();
-
-        if (caseData.getGeneralAppRespondentSolicitors() != null
-            && caseData.getGeneralAppRespondentSolicitors().size() > 0) {
-            log.info(
-                "General app respondent has more than 0 solicitor(s) for caseId: {}",
-                caseData.getCcdCaseReference()
-            );
-            responseElementOptional1 = response1(caseData);
+        String respondentOneLocation = getRespondentCourtDirectionLocation(caseData, 0);
+        String respondentTwoLocation = getRespondentCourtDirectionLocation(caseData, 1);
+        if (!respondentOneLocation.isEmpty() && !respondentTwoLocation.isEmpty()) {
+            return concat(concat(format(JUDICIAL_PREF_COURT_LOC_RESP1_TEXT, respondentOneLocation), " "),
+                          format(JUDICIAL_PREF_COURT_LOC_RESP2_TEXT, respondentTwoLocation));
         }
-        if (caseData.getGeneralAppRespondentSolicitors() != null
-            && caseData.getGeneralAppRespondentSolicitors().size() > 1) {
-            log.info(
-                "General app respondent has more than 1 solicitor(s) for caseId: {}",
-                caseData.getCcdCaseReference()
-            );
-            responseElementOptional2 = response2(caseData);
+        if (!respondentOneLocation.isEmpty()) {
+            return format(JUDICIAL_PREF_COURT_LOC_RESP1_TEXT, respondentOneLocation);
         }
-        YesOrNo hasRespondent1PreferredLocation = hasPreferredLocation(responseElementOptional1);
-        YesOrNo hasRespondent2PreferredLocation = hasPreferredLocation(responseElementOptional2);
-
-        if (responseElementOptional1.isPresent() && responseElementOptional2.isPresent()
-            && hasRespondent1PreferredLocation == YES && hasRespondent2PreferredLocation == YES) {
-            return concat(
-                concat(
-                    format(
-                        JUDICIAL_PREF_COURT_LOC_RESP1_TEXT, responseElementOptional1.get()
-                            .getValue().getGaHearingDetails().getHearingPreferredLocation()
-                            .getValue().getLabel()
-                    ), " "
-                ),
-                format(
-                    JUDICIAL_PREF_COURT_LOC_RESP2_TEXT, responseElementOptional2.get().getValue()
-                        .getGaHearingDetails().getHearingPreferredLocation().getValue().getLabel()
-                )
-            );
-        }
-        if (responseElementOptional1.isPresent() && hasRespondent1PreferredLocation == YES) {
-            return format(
-                JUDICIAL_PREF_COURT_LOC_RESP1_TEXT, responseElementOptional1.get().getValue()
-                    .getGaHearingDetails().getHearingPreferredLocation().getValue().getLabel()
-            );
-
-        }
-        if (responseElementOptional2.isPresent() && hasRespondent2PreferredLocation == YES) {
-            return format(
-                JUDICIAL_PREF_COURT_LOC_RESP2_TEXT, responseElementOptional2.get().getValue()
-                    .getGaHearingDetails().getHearingPreferredLocation().getValue().getLabel()
-            );
+        if (!respondentTwoLocation.isEmpty()) {
+            return format(JUDICIAL_PREF_COURT_LOC_RESP2_TEXT, respondentTwoLocation);
         }
         return StringUtils.EMPTY;
+    }
+
+    private String getRespondentCourtDirectionLocation(GeneralApplicationCaseData caseData, int respondentIndex) {
+        Optional<Element<GARespondentResponse>> response = getRespondentResponseForCourtDirection(caseData, respondentIndex);
+        if (response.isPresent() && hasPreferredLocation(response) == YES) {
+            return response.get().getValue().getGaHearingDetails().getHearingPreferredLocation().getValue().getLabel();
+        }
+        return StringUtils.EMPTY;
+    }
+
+    private Optional<Element<GARespondentResponse>> getRespondentResponseForCourtDirection(GeneralApplicationCaseData caseData,
+                                                                                           int respondentIndex) {
+        if (caseData.getGeneralAppRespondentSolicitors() == null
+            || caseData.getGeneralAppRespondentSolicitors().size() <= respondentIndex) {
+            return Optional.empty();
+        }
+        log.info(
+            "General app respondent has more than {} solicitor(s) for caseId: {}",
+            respondentIndex,
+            caseData.getCcdCaseReference()
+        );
+        return respondentIndex == 0 ? response1(caseData) : response2(caseData);
+    }
+
+    private record ConfirmationContent(String header, String body) {
     }
 
     private YesOrNo hasPreferredLocation(Optional<Element<GARespondentResponse>> responseElementOptional) {
